Fix visibility handling of table col, row group, row

The visibility:hidden rule of table col, row group and row is different
from other elements. For example, column's visibility:hidden doesn't
apply; row's visibility:hidden shouldn't hide row's background painted
behind visible cells, etc. See the bug for details.

Let their LocalVisualRect() ignore visibility to ensure the visual rect
covers anything they paint or affect.

TBR=wangxianzhu@chromium.org

(cherry picked from commit b30f7c7ec99855d695a06c2c55651c8f03e941e4)

Bug: 760709
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I907123e63ec6b4a0ae1f23f35aaffad020eebbd8
Reviewed-on: https://chromium-review.googlesource.com/653608
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Reviewed-by: Walter Korman <wkorman@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#500687}
Reviewed-on: https://chromium-review.googlesource.com/660841
Reviewed-by: Xianzhu Wang <wangxianzhu@chromium.org>
Cr-Commit-Position: refs/branch-heads/3202@{#126}
Cr-Branched-From: fa6a5d87adff761bc16afc5498c3f5944c1daa68-refs/heads/master@{#499098}